# probabilistic-linear-regression-attack-hypersphere-secure-sketch

./: .gitignore  ARTIFACT-EVALUATION.md  DOCKERFILE  Dockerfile  LICENSE  README  README.md  add_extra_noise.py  attacker.py  example.ipynb  ironmask.py  local_search.ipynb  model.py  noise-trade-off.ipynb  pyproject.toml  real-world-dataset.ipynb  runtimes_vec._025pickle  runtimes_vec.pickle  runtimes_vec_feret.pickle  sample.py  svd.ipynb  test.py  test_recovery_time.ipynb  utils.py
data_with_noise_3/: threshold_array_100_0.07_success_num_run_time.npy  threshold_array_100_0.0_success_num_run_time.npy  threshold_array_110_0.0_success_num_run_time.npy  threshold_array_120_0.07_success_num_run_time.npy  threshold_array_130_0.0_success_num_run_time.npy  threshold_array_130_0.108_success_num_run_time.npy  threshold_array_130_0.18_success_num_run_time.npy  threshold_array_140_0.07_success_num_run_time.npy  threshold_array_140_0.0_success_num_run_time.npy  threshold_array_140_0.108_success_num_run_time.npy  threshold_array_140_0.18_success_num_run_time.npy  threshold_array_140_0.25_success_num_run_time.npy  threshold_array_150_0.108_success_num_run_time.npy  threshold_array_150_0.18_success_num_run_time.npy  threshold_array_150_0.25_success_num_run_time.npy  threshold_array_160_0.0_success_num_run_time.npy  threshold_array_160_0.108_success_num_run_time.npy  threshold_array_160_0.18_success_num_run_time.npy  threshold_array_160_0.25_success_num_run_time.npy  threshold_array_160_0.35_success_num_run_time.npy  threshold_array_170_0.35_success_num_run_time.npy  (+54 more)
(+56 files in other folders)
