[project]
name = "probabilistic-linear-regression-attack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.1",
    "numpy",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
    "scikit-learn>=1.3.0",
    "scikit-learn-intelex>=2023.1; platform_machine == 'x86_64' or platform_machine == 'AMD64' or platform_machine == 'amd64' or platform_machine == 'i386' or platform_machine == 'i686'",
    "torch",
    "torchvision",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu121", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[dependency-groups]
dev = ["ipykernel>=6.29.5"]
